[package]
name = "workjournal"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["cargo"] }
directories = "5.0.1"
grep = "0.3.2"
natural-sort-rs = "0.1.1"
regex = { version = "1.11.0", features = ["std"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
